# dotfiles

./: .gitconfig  .gitignore  .luacheckrc  .npmrc  .prettierignore  .prettierrc  .shellcheckrc  .taplo.toml  .tmux.conf  .vimrc  .zshenv  .zshrc  AGENTS.md  CLAUDE.md  PATH_ISOLATION_AUDIT.md  README.md  SETUP_IMPROVEMENT_PLAN.md  alacritty.yml  example-macos-update.bash  example-mode-update.bash  example-npm-update.bash  install.sh  setup.bash  setup.sh  setup.zsh  update.bash  update.zsh
.github/: PULL_REQUEST_TEMPLATE.md
.vim/: mappings.vim  plugins.vim  settings.vim
@common/: README.md
apps/: Brewfile
content/: README.md  install.bash
core/: README.md
features/: README.md  check.bash  new.bash  new.zsh  restart.bash  run.bash  run.zsh  start.bash  stop.bash  stop.zsh  submit.bash  test.bash  utils.bash
gh/: README.md  install.bash
git/: README.md  install.bash
harlequin/: uninstall.bash
homebrew/: README.md  install.bash  update.bash
kinesis-advantage-2/: README.md  qwerty.txt  state.txt
legacy/: README.md
lib/: content-utils.bash  homebrew-utils.bash  homebrew-utils.zsh  macos-utils.bash  neovim-utils.bash  node-utils.bash  npm-utils.bash  rust-utils.bash  settings-utils.bash  ssh-utils.zsh  symlink-utils.bash  tmux-utils.bash  uv-utils.bash  yazi-utils.bash  zsh-utils.bash
lvim-backup-copy/: .stylua.toml  lv-config.lua
mac-setup/: Brewfile  Brewfile.lock.json  README.md  macos-defaults  setup
macos/: Brewfile  README.md  kitty.environment.plist  macos-defaults  update.bash
neovim/: README.md  install.bash  update.bash
node/: README.md  (+2 more)
tools/claude/config/skills/scan-git-for-tils/: README.md  SKILL.md  publish_til.py  pyproject.toml  scan_git.py  shared.py  test_pure_functions.py
tools/claude/config/skills/scan-git-for-tils/git/: commits.py  formatting.py
tools/claude/config/skills/scan-git-for-tils/notion/: blocks.py  client.py  commits.py  validation.py  writing.py
tools/claude/config/skills/scan-git-for-tils/op/: secrets.py
tools/claude/config/skills/scanning-git-for-tils/: COMPARISON.md  README.md  SKILL.md  deno.json  package.json  publish_til.ts  pyproject.toml  scan_git.py  scan_git.ts  test.ts  tsconfig.json
tools/claude/config/skills/scanning-git-for-tils/git/: __init__.py  commits.ts  formatting.ts
tools/claude/config/skills/scanning-git-for-tils/notion/: __init__.py  blocks.py  blocks.ts  client.py  commits.ts  writing.py  writing.ts
tools/claude/config/skills/scanning-git-for-tils/op/: __init__.py  secrets.py  secrets.ts
(+1529 files in other folders)
