[project]
name = "scan-git-for-tils"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
exclude = [
    "^.venv/",
    "^venv/",
    "^build/",
    "^dist/",
]
