[project]
name = "scan-git-for-tils"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "I",   # import sorting
    "UP",  # pyupgrade: modernize syntax (e.g., list[str] instead of List[str])
]

[tool.mypy]
python_version = "3.11"
strict = false
exclude = [
    "^.venv/",
    "^venv/",
    "^build/",
    "^dist/",
]
