[project]
name = "scanning-git-for-tils"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "I",   # import sorting
    "UP",  # pyupgrade: modernize syntax (e.g., list[str] instead of List[str])
]

[tool.mypy]
python_version = "3.11"
strict = false

# Enforce type hints on all functions (including return types)
disallow_untyped_defs = true

# Require explicit Optional (str | None, not str = None)
no_implicit_optional = true

# Keep type: ignore comments clean
warn_unused_ignores = true

# Warn when returning Any from typed functions
# We handle this by validating with Pydantic immediately after API calls
warn_return_any = true

exclude = [
    "^.venv/",
    "^venv/",
    "^build/",
    "^dist/",
]
